--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
- 
-<body>
-  <h1>Welcome to my site!</h1>
-</body>
- 
+ <head>
+  <title>
+   Kerem's site
+  </title>
+ </head>
+ <body>
+  <h1>Kerem Kutlu</h1>
+ </body>
 </html>
