--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
       <h1>Kerem Kutlu</h1>
+    <p>Dit is niet de definitieve versie; laatst bewerkt: 24/02/2023</p>
   </body>
 </html>
