--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </title>
   </head>
   <body>
-      <h1>Kerem Kutlu</h1>
+      <h1>Welkom op mijn website!</h1>
+    <h2>Kerem</h2>
+    
+    
     <p><i>Dit is niet de definitieve versie; laatst bewerkt: 24/02/2023</i></p>
   </body>
 </html>
