--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <html>
   <head>
     <title>
-      Kerem's site
+      Kerem's Blog
     </title>
   </head>
   <body>
-      <h1>Welkom op mijn website!</h1>
-    <h2>Kerem</h2>
+      <h1>Welkom op mijn blog!</h1>
+    <h2>Wat vind je terug op het blog van kerem?</h2>
+    <ul>
+      <li>Biografie</li>
+      <li>Status zelfstudie</li>
+      <li>Mijn plan</li>
+      <li>Mijn hobbies</li>
+      <li></li>
+    </ul>
     
     
-    <p><i>Dit is niet de definitieve versie; laatst bewerkt: 24/02/2023</i></p>
+    <p><i>Deze site is een project van mezelf om mijn vaardigheden uit te testen. Dit is niet de definitieve versie; laatst bewerkt: 24/02/2023</i></p>
   </body>
 </html>
