--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-      <h1>Welkom op mijn blog!</h1>
+      <h1>Welkom op mijn persoonlijke website!</h1>
     <h2>Wat vind je terug op het blog van Kerem?</h2>
     <p>waarschuwing: Als U niet tegen lelijke websites kunt kijken, kan U gerust later terug komen kijken.<br> 
       Momenteel is de auteur van de website nog bezig met zijn zelfstudie. :) </p>
