--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <title>
       Kerem's Blog
     </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <h1>Welkom op mijn persoonlijke website!</h1>
     <h2>Wat vind je terug op het blog van Kerem?</h2>
-    <p>waarschuwing: Als U niet tegen lelijke websites kunt kijken, kan U gerust later terug komen kijken.<br> 
+    <p id="warning">WAARSCHUWING: Als U niet tegen lelijke websites kunt kijken, kan U gerust later terug komen kijken.<br> 
       Momenteel is de auteur van de website nog bezig met zijn zelfstudie. :) </p>
     
     <h3>INHOUD:</h3>
