--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      Kerem's Blog
+      Kerem's web
     </title>
     <link rel="stylesheet" href="style.css">
   </head>
