commit# Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <h2>Biografie</h2>
       Mijn naam is Kerem, ik ben van turkse afkomst. Ik ben geboren en getogen in Wilrijk. Ik heb een beperking, 
-      namelijk ik ben slechthorend aan beide kanten. Gebarentaal is bij mij niet van toepassing omdat ik bij verbale communicatie niet veel problemen ondervind.
+      namelijk ik ben slechthorend aan beide kanten. <br>Gebarentaal is bij mij niet van toepassing omdat ik bij verbale communicatie niet veel problemen ondervind.
       Tot mijn 5<sup>de</sup> leerjaar ging ik naar een buitengewone school waar vooral doven en slechthorenden zaten. Na  
     <h2>Status zelfstudie</h2>
     <h2>Mijn hobbies</h2>
