--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>
-            Kerem's Web
+
         </title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>WELKOM!</h1>
-    <p id="welkom">Welkom op de website van Kerem Kutlu! Wij wensen u veel kijk en leesplezier!</p>
-    
-    <div>
-        <ul id="main">
-            <li>Biografie</li>
-            <li>Status</li>
-            <li>Contact</li>
-        </ul>
-    </div>
+        <!--Header-->
+        <header>
+            <nav>
+                <p><a href="">Home</a></p>
+                <p><a href="">Intro</a></p>
+                <p><a href="">Contact</a></p>
+            </nav>
+        </header>
+
+        <!--Main-->
+        <main>
+            <section id="first">
+                <h1>
+                    Kerem Kutlu
+                </h1>
+                <h2>
+                    Self-Taught Web-Developper
+                </h2>
+            </section>
+        </main>
+
+        <!--Footer-->
+        <footer>
+
+        </footer>
     </body>
 </html>
