--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
 
         </title>
-        <link rel="stylesheet" href="https://github.com/Kerem-16/kerem-16.github.io/blob/fbcaf969b0c0bceaa2e446d886e2359fe8917c02/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
