--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>
-            Kerem's portfolio
+
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
@@ -16,23 +16,27 @@
                 <p><a href="">Intro</a></p>
                 <p><a href="">Contact</a></p>
             </nav>
+
+            <section id="first">
+                <h1>
+                    <- Kerem Kutlu ->
+                </h1>
+                <h2>
+                    <u>Self-Taught</u> Web-Developper
+                </h2>
+            </section>
         </header>
 
         <!--Main-->
         <main>
-            <section id="first">
-                <h1>
-                    Kerem Kutlu
-                </h1>
-                <h2>
-                    Self-Taught Web-Developper
-                </h2>
-            </section>
+            <p>
+                <a href="">Discover me</a>
+            </p>
         </main>
 
         <!--Footer-->
         <footer>
-
+            <p>Note: This is not the final version; latest updates: 27/02/2023</p>
         </footer>
     </body>
 </html>
