--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>
-
+            Kerem's portfolio
         </title>
-        <link rel="stylesheet" href="https://github.com/Kerem-16/kerem-16.github.io/blob/95a04c151866c26e0129c0bfb86dcdac7e8158f1/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
