--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>
-            Kerem's portfolio
+
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
@@ -11,28 +11,58 @@
     <body>
         <!--Header-->
         <header>
-            <nav>
+            <nav class="nav">
                 <p><a href="">Home</a></p>
                 <p><a href="">Intro</a></p>
                 <p><a href="">Contact</a></p>
             </nav>
 
             <section id="first">
-                <h1>
-                    <- Kerem Kutlu ->
-                </h1>
-                <h2>
-                    <u>Self-Taught</u> Web-Developper
-                </h2>
+                <section class="abc">
+                    <h1>
+                        <- Kerem Kutlu ->
+                    </h1>
+                </section>
+                <section class="abc">
+                    <h2>
+                        <u>Self-Taught</u> Web-Developper
+                    </h2>
+                </section>
+            </section>
+
+            <section id="dm">
+            <p>
+                <a href="#mn">Discover me</a>
+            </p>
             </section>
         </header>
-
-        <!--Main-->
-        <main>
-            <p>
-                <a href="">Discover me</a>
-            </p>
+        <main id="mn">
+            <section>
+                <section class="titles bg">
+                    <h2>Who am I?</h2>
+                    <p>
+                        I'm someone who, sadly, discovered web development very late. 
+                        I wish I did bump into this lovely field earlier in my life. 
+                        But still I'm so gratefull that I started learning to code!
+                    </p>
+                    <h2>Self-taught web Web-Developper</h2>
+                    <p>
+                        At first, I thought it would be very hard and take a lot of 
+                        effort to learn to code. But I was totally wrong! 
+                        It was fun learning on the Codecademy courses and 
+                        it was totally worth all my time and effort.  
+                    </p>
+                    <section class="cont">
+                    <h2>Contacts</h2>
+                    <p>                    
+                        <a href = "mailto: kerem.kutlu@icloud.com">Email</a>
+                        <a href="https://www.linkedin.com/in/kerem-kutlu/">linkedIn</a>
+                    </p>
+                  </section>
+                </section>
+            </section>
         </main>
+
 
         <!--Footer-->
         <footer>
