--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<html lang="en">
     <head>
-        <title>
-
-        </title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+        <title>Kerem's portfolio</title>
     </head>
     <body>
         <!--Header-->
@@ -66,7 +67,7 @@
 
         <!--Footer-->
         <footer>
-            <p>Note: This is not the final version; latest updates: 28/02/2023</p>
+            <p>Note: This is not the final version; latest updates: 27/02/2023</p>
         </footer>
     </body>
 </html>
