--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <img src="media/logo.png" alt="logo"/>
+            <img src="logo.png" alt="logo"/>
             <h1>
                 Bakery Sweet Treat
             </h1>
@@ -42,13 +42,13 @@
                     </p>
                 </article>
                 <article class="pic">
-                    <img src="media/brownie.png" alt="brownie">
+                    <img src="brownie.png" alt="brownie">
                 </article>
             </section>
 
             <section class="two">
                 <section class="middle">
-                    <img src="media/three.png">
+                    <img src="three.png">
                 </section>
                 <section class="right">
                         <article class="top"><h2>Sweet Treat Bakery,</h2></article>
