--- a/index.html
+++ b/index.html
@@ -4,62 +4,70 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <title>Sweet Treat Bakery</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+        <title>Kerem's portfolio</title>
     </head>
     <body>
+        <!--Header-->
         <header>
-            <img src="logo.png" alt="logo"/>
-            <h1>
-                Bakery Sweet Treat
-            </h1>
-            <nav>
-                <ul>
-                    <a href=""><li>Home</li></a>
-                    <a href=""><li>Treats</li></a>
-                    <a href=""><li>About Us</li></a>
-                    <a href=""><li>Contacts</li></a>
-                </ul>
+            <nav class="nav">
+                <p><a href="">Home</a></p>
+                <p><a href="">Intro</a></p>
+                <p><a href="">Contact</a></p>
             </nav>
-            
-        </header>
-        <main>
-            <section class="one">
-                <article class="description">
-                    <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </article>
-                <article class="pic">
-                    <img src="brownie.png" alt="brownie">
-                </article>
+
+            <section id="first">
+                <section class="abc">
+                    <h1>
+                        <- Kerem Kutlu ->
+                    </h1>
+                </section>
+                <section class="abc">
+                    <h2>
+                        <u>Self-Taught</u> Web-Developper
+                    </h2>
+                </section>
             </section>
 
-            <section class="two">
-                <section class="middle">
-                    <img src="three.png">
+            <section id="dm">
+            <p>
+                <a href="#mn">Discover me</a>
+            </p>
+            </section>
+        </header>
+        <main id="mn">
+            <section>
+                <section class="titles bg">
+                    <h2>Who am I?</h2>
+                    <p>
+                        I'm someone who, sadly, discovered web development very late. 
+                        I wish I did bump into this lovely field earlier in my life. 
+                        But still I'm so gratefull that I started learning to code!
+                    </p>
+                    <h2>Self-taught web Web-Developper</h2>
+                    <p>
+                        At first, I thought it would be very hard and take a lot of 
+                        effort to learn to code. But I was totally wrong! 
+                        It was fun learning on the Codecademy courses and 
+                        it was totally worth all my time and effort.  
+                    </p>
+                    <section class="cont">
+                    <h2>Contacts</h2>
+                    <p>                    
+                        <a href = "mailto: kerem.kutlu@icloud.com">Email</a>
+                        <a href="https://www.linkedin.com/in/kerem-kutlu/">linkedIn</a>
+                    </p>
+                  </section>
                 </section>
-                <section class="right">
-                        <article class="top"><h2>Sweet Treat Bakery,</h2></article>
-                        <article class="between"><h2>the place where all the brownies are made</h2></article>
-                        <article class="bottom"><h2>with love and care...</h2></article>
-                </section>
-                
             </section>
         </main>
-        <footer>
 
+
+        <!--Footer-->
+        <footer>
+            <p>Note: This is not the final version; latest updates: 27/02/2023</p>
         </footer>
     </body>
 </html>
