--- a/index.html
+++ b/index.html
@@ -1,73 +1,58 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-        <title>Kerem's portfolio</title>
-    </head>
-    <body>
-        <!--Header-->
-        <header>
-            <nav class="nav">
-                <p><a href="">Home</a></p>
-                <p><a href="">Intro</a></p>
-                <p><a href="">Contact</a></p>
-            </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Sacramento&display=swap" rel="stylesheet">
+</head>
+<body>
 
-            <section id="first">
-                <section class="abc">
-                    <h1>
-                        <- Kerem Kutlu ->
-                    </h1>
-                </section>
-                <section class="abc">
-                    <h2>
-                        <u>Self-Taught</u> Web-Developper
-                    </h2>
-                </section>
-            </section>
+    <!--Header-->
+    <div class="header">
+        <h1>The Sweet Treat Bakehouse</h1>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Treats</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 
-            <section id="dm">
-            <p>
-                <a href="#mn">Discover me</a>
-            </p>
-            </section>
-        </header>
-        <main id="mn">
-            <section>
-                <section class="titles bg">
-                    <h2>Who am I?</h2>
-                    <p>
-                        I'm someone who, sadly, discovered web development very late. 
-                        I wish I did bump into this lovely field earlier in my life. 
-                        But still I'm so gratefull that I started learning to code!
-                    </p>
-                    <h2>Self-taught web Web-Developper</h2>
-                    <p>
-                        At first, I thought it would be very hard and take a lot of 
-                        effort to learn to code. But I was totally wrong! 
-                        It was fun learning on the Codecademy courses and 
-                        it was totally worth all my time and effort.  
-                    </p>
-                    <section class="cont">
-                    <h2>Contacts</h2>
-                    <p>                    
-                        <a href = "mailto: kerem.kutlu@icloud.com">Email</a>
-                        <a href="https://www.linkedin.com/in/kerem-kutlu/">linkedIn</a>
-                    </p>
-                  </section>
-                </section>
-            </section>
-        </main>
+    <!--Topmain-->
+    <div class="topmain">
+        <div class="title">
+            <h2>Here, all the brownies are made with love and care...</h2>
+            <h4></h4>
+        </div>
+        <img src="https://images3.alphacoders.com/846/846324.jpg">
+    </div>
 
+    <!--Middlemain-->
+    <div class="middlemain">
+        <p>middlemain</p>
+    </div>
 
-        <!--Footer-->
-        <footer>
-            <p>Note: This is not the final version; latest updates: 27/02/2023</p>
-        </footer>
-    </body>
+    <!--Bottommain-->
+    <div class="bottommain">
+        <p>bottommain</p>
+    </div>
+
+    <!--Prefooter-->
+    <div class="prefooter">
+        <p>prefooter</p>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <p>footer</p>
+    </div>
+</body>
 </html>
