--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brownies</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,14 +12,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <!--Header-->
     <div class="header">
         <h1>The Sweet Treat Bakehouse</h1>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Treats</a></li>
+                <li class="current"><a href="">Home</a></li>
+                <li><a href="treats.html">Treats</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
@@ -29,7 +28,7 @@
     <!--Topmain-->
     <div class="topmain">
         <div class="title">
-            <h2>Here, all the brownies are made with love and care...</h2>
+            <h2>Here, all the brownies are made with &#9829; and care...</h2>
             <h4></h4>
         </div>
         <img src="https://images3.alphacoders.com/846/846324.jpg">
