--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li class="current"><a href="">Home</a></li>
                 <li><a href="treats.html">Treats</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
