--- a/treats.html
+++ b/treats.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li class="current"><a href="">Treats</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
