--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <html lang="en">
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brownies</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KZLV81NQB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5KZLV81NQB');
-</script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,9 +18,9 @@
         <nav>
             <ul>
                 <li class="current"><a href="">Home</a></li>
-                <li><a href="treats.html">Treats</a></li>
+                <li><a href="treats.html">Products</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -40,27 +31,44 @@
             <h2>Here, all the brownies are made with &#9829; and care...</h2>
             <h4></h4>
         </div>
-        <img src="https://images3.alphacoders.com/846/846324.jpg">
     </div>
 
     <!--Middlemain-->
     <div class="middlemain">
-        <p>middlemain</p>
+        <div class="container">
+            <div class="child" title="brood"><a class="breads" href="">Breads</a></div>
+            <div class="child" title="koek"><a class="cookies" href="">Cookies</a></div>
+            <div class="child" title="gebak"><a class="pastries" href="">Pastries</a></div>
+            <div class="child" title="muffin"><a class="muffin" href="">Muffins</a></div>
+            <div class="child" title="speciaal"><a class="special" href="">Special</a></div>
+            <div class="child" title="overige"><a class="solden" href="">Solden</a></div>
+        </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <!--Bottommain-->
     <div class="bottommain">
-        <p>bottommain</p>
+
     </div>
 
     <!--Prefooter-->
     <div class="prefooter">
-        <p>prefooter</p>
+
     </div>
 
     <!--Footer-->
     <div class="footer">
-        <p>footer</p>
+
     </div>
 </body>
 </html>
